[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fcid"
version = "0.0.10"
authors = [
    {name = "Nick Waters", email = "nickp60@gmail.com"},
]
description = "Get Illumina sequencer metadata from flowcell/machine identifier"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]



[project.scripts]
fcid = "fcid.run:main"