[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fcid"
version = "0.1.0"
authors = [
    {name = "Nick Waters", email = "nickp60@gmail.com"},
]
maintainers = [
  {name = "Nick Waters", email = "nickp60@gmail.com"},
  {name = "Grammatikati Konstantin", email="stikus@mail.ru"}
]
description = "Get Illumina sequencer metadata from flowcell/machine identifier"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]



[project.scripts]
fcid = "fcid.run:main"
